@@ -1,6 +1,7 @@
 Intended v0.2.15
 + Use `let` instead of `var` for variable declarations
 + allow for comma-seperated declarations (e.g. let foo = 1, bar = 2)
++ new mutation statement syntax - instead of foo.bar.set(2), you say foo.bar set: 2
 
 v0.2.14
 + inline statically referenced stylesheets
